--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 ul{
     position: relative;
     display: block;
@@ -15,4 +21,21 @@ h1{
   }
 ul li{
     margin-right: 13px;
+  }
+
+
+
+
+
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    width: 40%;
+    margin: 0 auto;
+  }
+
+  .grid-square {
+    border: 2px solid black;
+    padding: 100px;
   }
