--- a/style.css
+++ b/style.css
@@ -1,19 +1,41 @@
-/* .container {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background: #eee;
-  } */
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+ul{
+    position: relative;
+    display: block;
+    text-align: center;
   }
-  .row{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+
+  
+li {
+    width: 50%;
+    display: inline;
+    font-size: xx-large;
+  }
+h1{
+    text-align: center;
+  }
+ul li{
+    margin-right: 13px;
+  }
+
+
+
+
+
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    width: 40%;
+    margin: 0 auto;
+  }
+
+  .grid-square {
+    border: 2px solid black;
+    padding: 100px;
   }
