--- a/style.css
+++ b/style.css
@@ -6,25 +6,53 @@
 
 ul{
     position: relative;
-    display: block;
-    text-align: center;
+  
+    text-align: left;
+    float: left;
   }
 
   
-li {
-    width: 50%;
-    display: inline;
+li  {
+    width: 100%;
     font-size: xx-large;
   }
 h1{
+    display:flexbox;
     text-align: center;
   }
 ul li{
-    margin-right: 13px;
-  }
+text-align: left;
+}
+ul{
+  border: solid 10px;
+  width: 500px;
+  background: hsla(303, 79%, 76%, 1);
 
+  background: linear-gradient(90deg, hsla(303, 79%, 76%, 1) 0%, hsla(360, 86%, 67%, 1) 100%);
+  
+  background: -moz-linear-gradient(90deg, hsla(303, 79%, 76%, 1) 0%, hsla(360, 86%, 67%, 1) 100%);
+  
+  background: -webkit-linear-gradient(90deg, hsla(303, 79%, 76%, 1) 0%, hsla(360, 86%, 67%, 1) 100%);
+  
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#F292ED", endColorstr="#F36364", GradientType=1 );
+ position:absolute;
+}
 
+ol{
+  text-align: center;
+  font-size: xx-large;
+}
+body{
+  background: hsla(46, 95%, 56%, 1);
 
+  background: linear-gradient(90deg, hsla(46, 95%, 56%, 1) 0%, hsla(350, 97%, 65%, 1) 100%);
+  
+  background: -moz-linear-gradient(90deg, hsla(46, 95%, 56%, 1) 0%, hsla(350, 97%, 65%, 1) 100%);
+  
+  background: -webkit-linear-gradient(360deg, hsla(46, 95%, 56%, 1) 0%, hsla(350, 97%, 65%, 1) 100%);
+  
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#F9C823", endColorstr="#FC506E", GradientType=1 );
+}
 
 
   .grid {
@@ -32,10 +60,78 @@ ul li{
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
     width: 40%;
-    margin: 0 auto;
+    margin: 0 28%;
+    background-color: aliceblue;
   }
 
   .grid-square {
     border: 2px solid black;
     padding: 100px;
+    background: hsla(43, 83%, 93%, 1);
+
+background: radial-gradient(circle, hsla(43, 83%, 93%, 1) 0%, hsla(16, 62%, 93%, 1) 19%, hsla(352, 55%, 92%, 1) 36%, hsla(0, 51%, 93%, 1) 50%, hsla(337, 54%, 91%, 1) 69%, hsla(351, 50%, 92%, 1) 82%, hsla(357, 24%, 85%, 1) 100%);
+
+background: -moz-radial-gradient(circle, hsla(43, 83%, 93%, 1) 0%, hsla(16, 62%, 93%, 1) 19%, hsla(352, 55%, 92%, 1) 36%, hsla(0, 51%, 93%, 1) 50%, hsla(337, 54%, 91%, 1) 69%, hsla(351, 50%, 92%, 1) 82%, hsla(357, 24%, 85%, 1) 100%);
+
+background: -webkit-radial-gradient(circle, hsla(43, 83%, 93%, 1) 0%, hsla(16, 62%, 93%, 1) 19%, hsla(352, 55%, 92%, 1) 36%, hsla(0, 51%, 93%, 1) 50%, hsla(337, 54%, 91%, 1) 69%, hsla(351, 50%, 92%, 1) 82%, hsla(357, 24%, 85%, 1) 100%);
+
+filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#FCF4DF", endColorstr="#F8E7E1", GradientType=1 );
   }
+.drag {
+  display: flex;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 400px;
+  width: 100px;
+  gap: 10px;
+  margin: 0 40px;
+  cursor: grab;
+}
+.drag .board-box{
+  padding: 15px;
+  background: rgba(255, 255, 255, 0.1);
+  background-color: #fff;
+}
+ #circle-box{
+  left: 80%;
+  bottom: 20%;
+ }
+ #cross-box{
+  left: 10%;
+  top: 30%;
+ }
+.drag .board-box .cross{
+  position: relative;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.drag .board-box .cross:before{
+  content: 'X';
+  position: absolute;
+  width: 5px;
+  height: 100%;
+  background: #fff;
+  font-size: x-large;
+}
+.drag .board-box .circle{
+  position: relative;
+  width: 50px;
+  height: 50px;
+  border: 5px solid black;
+  border-radius: 50%;
+}
+#reset{
+  position: absolute;
+  bottom: -30%;
+  right: 50%;
+  transform: translateX(-50%);
+  padding: 10px 25px;
+  border: none;
+  outline: none;
+  align-items: center 20%;
+}
