--- a/style.css
+++ b/style.css
@@ -4,26 +4,27 @@
   box-sizing: border-box;
 }
 
-ul{
-    position: relative;
+ul {
+  /* position: relative; */
   
-    text-align: left;
-    float: left;
-  }
-
-  
-li  {
-    width: 100%;
-    font-size: xx-large;
-  }
-h1{
-    display:flexbox;
-    text-align: center;
-  }
-ul li{
-text-align: left;
+  /* text-align: left; */
 }
-ul{
+  
+li {
+  width: 100%;
+  font-size: xx-large;
+}
+
+h1 {
+  display:flexbox;
+  text-align: center;
+}
+
+ul li {
+  text-align: left;
+}
+
+ul {
   border: solid 10px;
   width: 500px;
   background: hsla(303, 79%, 76%, 1);
@@ -35,13 +36,14 @@ ul{
   background: -webkit-linear-gradient(90deg, hsla(303, 79%, 76%, 1) 0%, hsla(360, 86%, 67%, 1) 100%);
   
   filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#F292ED", endColorstr="#F36364", GradientType=1 );
- position:absolute;
+  position:absolute;
 }
 
-ol{
+ol {
   text-align: center;
   font-size: xx-large;
 }
+
 body{
   background: hsla(46, 95%, 56%, 1);
 
@@ -54,29 +56,32 @@ body{
   filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#F9C823", endColorstr="#FC506E", GradientType=1 );
 }
 
+.grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  width: 40%;
+  margin: 0 28%;
+  background-color: aliceblue;
+}
 
-  .grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    width: 40%;
-    margin: 0 28%;
-    background-color: aliceblue;
-  }
+.grid-square {
+  border: 2px solid black;
+  padding: 100px;
+  background: hsla(43, 83%, 93%, 1);
+  width: 250px;
+  height: 250px;
+  
 
-  .grid-square {
-    border: 2px solid black;
-    padding: 100px;
-    background: hsla(43, 83%, 93%, 1);
+  background: radial-gradient(circle, hsla(43, 83%, 93%, 1) 0%, hsla(16, 62%, 93%, 1) 19%, hsla(352, 55%, 92%, 1) 36%, hsla(0, 51%, 93%, 1) 50%, hsla(337, 54%, 91%, 1) 69%, hsla(351, 50%, 92%, 1) 82%, hsla(357, 24%, 85%, 1) 100%);
 
-background: radial-gradient(circle, hsla(43, 83%, 93%, 1) 0%, hsla(16, 62%, 93%, 1) 19%, hsla(352, 55%, 92%, 1) 36%, hsla(0, 51%, 93%, 1) 50%, hsla(337, 54%, 91%, 1) 69%, hsla(351, 50%, 92%, 1) 82%, hsla(357, 24%, 85%, 1) 100%);
+  background: -moz-radial-gradient(circle, hsla(43, 83%, 93%, 1) 0%, hsla(16, 62%, 93%, 1) 19%, hsla(352, 55%, 92%, 1) 36%, hsla(0, 51%, 93%, 1) 50%, hsla(337, 54%, 91%, 1) 69%, hsla(351, 50%, 92%, 1) 82%, hsla(357, 24%, 85%, 1) 100%);
 
-background: -moz-radial-gradient(circle, hsla(43, 83%, 93%, 1) 0%, hsla(16, 62%, 93%, 1) 19%, hsla(352, 55%, 92%, 1) 36%, hsla(0, 51%, 93%, 1) 50%, hsla(337, 54%, 91%, 1) 69%, hsla(351, 50%, 92%, 1) 82%, hsla(357, 24%, 85%, 1) 100%);
+  background: -webkit-radial-gradient(circle, hsla(43, 83%, 93%, 1) 0%, hsla(16, 62%, 93%, 1) 19%, hsla(352, 55%, 92%, 1) 36%, hsla(0, 51%, 93%, 1) 50%, hsla(337, 54%, 91%, 1) 69%, hsla(351, 50%, 92%, 1) 82%, hsla(357, 24%, 85%, 1) 100%);
 
-background: -webkit-radial-gradient(circle, hsla(43, 83%, 93%, 1) 0%, hsla(16, 62%, 93%, 1) 19%, hsla(352, 55%, 92%, 1) 36%, hsla(0, 51%, 93%, 1) 50%, hsla(337, 54%, 91%, 1) 69%, hsla(351, 50%, 92%, 1) 82%, hsla(357, 24%, 85%, 1) 100%);
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#FCF4DF", endColorstr="#F8E7E1", GradientType=1 );
+}
 
-filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#FCF4DF", endColorstr="#F8E7E1", GradientType=1 );
-  }
 .drag {
   display: flex;
   position: relative;
@@ -89,21 +94,25 @@ filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#FCF4DF", en
   margin: 0 40px;
   cursor: grab;
 }
+
 .board-box{
   padding: 15px;
   background: rgba(255, 255, 255, 0.1);
   background-color: #fff;
 }
- #circle-box{
+
+#circle-box{
   left: 80%;
   bottom: 20%;
- }
- #cross-box{
+}
+
+#cross-box{
   left: 10%;
   top: 30%;
   position: relative;
- }
- .cross{
+}
+
+.cross{
   position: relative;
   width: 50px;
   height: 50px;
@@ -111,7 +120,8 @@ filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#FCF4DF", en
   justify-content: center;
   align-items: center;
 }
- .cross:before{
+
+.cross:before{
   content: 'X';
   position: absolute;
   width: 5px;
@@ -119,6 +129,7 @@ filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#FCF4DF", en
   background: #fff;
   font-size: x-large;
 }
+
 .circle{
   position: relative;
   width: 50px;
