--- a/style.css
+++ b/style.css
@@ -8,23 +8,18 @@ ul{
     position: relative;
   
     text-align: left;
-    float: left;
   }
-  p { 
-    margin-bottom: -10px; 
-} 
-.ui { 
-  display: flex; 
-  flex-direction: column; 
-  align-items: center; 
-} 
+
+  
 li  {
     width: 100%;
     font-size: xx-large;
+    list-style-type: none;
   }
 h1{
     display:flexbox;
     text-align: center;
+    margin: 0 70px 0 0;
   }
 ul li{
 text-align: left;
@@ -32,6 +27,7 @@ text-align: left;
 ul{
   border: solid 10px;
   width: 500px;
+  margin: 0 0 0 35%;
   background: hsla(303, 79%, 76%, 1);
 
   background: linear-gradient(90deg, hsla(303, 79%, 76%, 1) 0%, hsla(360, 86%, 67%, 1) 100%);
@@ -83,15 +79,10 @@ background: -webkit-radial-gradient(circle, hsla(43, 83%, 93%, 1) 0%, hsla(16, 6
 
 filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#FCF4DF", endColorstr="#F8E7E1", GradientType=1 );
   }
-  .grid-square::after{
-    outline: none;
-  }
   #test{
     text-align: center;
   }
-#print{
-  text-align: center;
-}
+
 
 #reset{
   position: absolute;
@@ -102,16 +93,5 @@ filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#FCF4DF", en
   border: none;
   outline: none;
   align-items: center 20%;
-}
-.cell{
-  border: none; 
-  width: 80px; 
-  height: 80px; 
-  display: flex; 
-  align-items: center; 
-  justify-content: center; 
-  font-size: 24px; 
-  text-align: center; 
-  cursor: pointer; 
 }
 
